@@ -454,6 +454,10 @@ WPC_ROMSTART(ft,l5p,"fshtd_5p.rom",0x80000,CRC(177d2b0b) SHA1(d5a1397c4e8c5acb86
 WPCS_SOUNDROM8xx("ft_u18.l1",CRC(48d2760a) SHA1(701b0bbb68f99332493ee1276e5a1cef5c85d499))
 WPC_ROMEND
 
+WPC_ROMSTART(ft,d6,"fshtd_6.rom",0x80000,CRC(b21a3672) SHA1(9005237848f79d21ceefad112854c62cbc7e584a))
+WPCS_SOUNDROM8xx("ft_u18.l1",CRC(48d2760a) SHA1(701b0bbb68f99332493ee1276e5a1cef5c85d499))
+WPC_ROMEND
+
 WPC_ROMSTART(ft,d5,"fshtd_5.rom",0x80000,CRC(67f5def4) SHA1(7ce676bc305e8d2adf43f00e98aa9ea32b85922f))
 WPCS_SOUNDROM8xx("ft_u18.l1",CRC(48d2760a) SHA1(701b0bbb68f99332493ee1276e5a1cef5c85d499))
 WPC_ROMEND
@@ -478,6 +482,7 @@ WPC_ROMEND
 /---------------*/
 CORE_GAMEDEF(ft,l5,"Fish Tales (L-5)",1992, "Williams",wpc_mFliptronS,0)
 CORE_CLONEDEF(ft,l5p,l5,"Fish Tales (L-5) Wrong text size patch",1992, "Williams",wpc_mFliptronS,0)
+CORE_CLONEDEF(ft,d6,l5,"Fish Tales (D-6) LED Ghost / Extra Ball Fix",2015,"Inkochnito / Williams",wpc_mFliptronS,0)
 CORE_CLONEDEF(ft,d5,l5,"Fish Tales (D-5) LED Ghost Fix",1992, "Williams",wpc_mFliptronS,0)
 CORE_CLONEDEF(ft,l3,l5,"Fish Tales (L-3)",1992, "Williams",wpc_mFliptronS,0)
 CORE_CLONEDEF(ft,l4,l5,"Fish Tales (L-4)",1992, "Williams",wpc_mFliptronS,0)
